--- a/2017/12.md
+++ b/2017/12.md
@@ -198,3 +198,70 @@ git push origin HEAD:refs/for/Dev0.0.1
 
 让调试变的欢乐起来吧！
 
+
+宏中的 ## 的含义
+----
+
+在宏的定义中，我们也许会遇到过 `##`，比如下面是一些第三方库中 `##` 使用场景：
+
+微信 WCDB 中的宏定义：
+`#define __WCDB_BINDING(className) _s_##className##_binding`
+
+唱吧 KTVHTTPCache 定义不同类中是否可以打印的例子：
+`#define KTVHCLogEnableValueConsoleLog(target)       KTVHCLog_##target##_ConsoleLogEnable`
+
+那 `##` 有什么用呢？
+`##` 在宏中的作用就是先分隔，然后进行强制连接。我们可能会定义不同的函数名或变量时就可以使用这样的宏定义。
+
+那 `##` 是如何工作的呢？
+
+1. `__WCDB_BINDING(className)` ，首先 `_s_##className##_binding` 会拆分成 `_s`,`className `,`_binding `。__WCDB_BINDING(ViewController) 将会被替换成 `_s_ViewController_binding`；
+
+2. `KTVHCLogEnableValueConsoleLog(target)`，首先 `KTVHCLog_##target##_ConsoleLogEnable` 会被拆分为 `KTVHCLog_`, `target ` 和 `_ConsoleLogEnable`。KTVHCLogEnableValueConsoleLog(Lefex) 会被替换成 `KTVHCLog_ Lefex_ConsoleLogEnable`；
+
+3.当使用 KTVHCLogEnable(HTTPServer, YES) ，将会定义一个名为 `KTVHCLog_ HTTPServer_ConsoleLogEnable` 静态常量，初始值为 YES。
+
+```
+#define KTVHCLogEnable(target, console_log_enable)               \
+static BOOL const KTVHCLog_##target##_ConsoleLogEnable = console_log_enable;        \
+```
+
+比如我们使用不同的 View 名字创建不同的 View：
+
+```
+#define Name(target) weibo_##target##_name
+#define View(target) view##target##Label
+
+@implementation ViewController
+
+- (void)viewDidLoad {
+    [super viewDidLoad];
+    
+    NSString * Name(lefex) = @"Lefe_x";
+    // 打印：You weibo name is: Lefe_x
+    NSLog(@"You weibo name is: %@", weibo_lefex_name);
+    
+    UILabel *View(1) = [UILabel new];
+    view1Label.backgroundColor = [UIColor redColor];
+    
+    UIView *View(2) = [UIView new];
+    view2Label.backgroundColor = [UIColor yellowColor];
+}
+```
+
+iOS快速解析崩溃日志
+----
+
+平时我们拿到一份崩溃日志，需要解析，一般操作是取到对应的 dSYM 和对应的二进制文件，然后拿到相应的崩溃日志 uuid 、二进制的 uuid、dSYM 的 uuid 通过命令行来解析。这些操作感觉比较耗时。下面介绍几种情况下的快速解析的方法：
+
+- 1、自己设备上 Xcode 编译的包发生闪退：连上手机打开 Xcode，cmd+shift+2 呼出 Device 的 Window，如图1所示，然后点击 View Device Logs，然后选中对应时间段自己 app 的崩溃日志。如果此时对应的调用栈还没有符号化，可以选中日志后右键如图2所示 Re-Symbolicate Log 即可。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/7-1.jpg?raw=true)
+
+- 2、如果是打包服务器或者 Appstore 的包发生闪退：拷贝对应的包和 dSYM 到任意文件夹下，注意将 dSYM 解压以及 .ipa 里面的 .app 取出。然后按照情况1的方式处理即可，Xcode 会自动索引二进制及 dSYM。
+
+- 3、如果拿到别的设备导出的未符号化的崩溃日志，可以将日志拖至图2所示的列表中，注意此时上面 tab 记得选 All Logs 而不是 This Device，然后参考情况2，找到崩溃日志对应的二进制包和 dSYM 文件，按照情况2处理即可。可能会遇到系统库的一些方法无法符号化的问题，只需要找到对应的设备连上电脑，让 Xcode 读取一遍该设备(同机型和系统版本的也可以)的符号表，然后再 Re-Symbolicate 一遍就行。
+
+- 4、遇到线上用户崩溃，无法拿到完整崩溃日志，可以让用户到【设置->分析->分析数据】里面找到对应时间点的崩溃日志，然后截图，根据一个开源工具 [dSYMTools](https://github.com/answer-huang/dSYMTools)，把崩溃栈的关键地址输入到文本框中即可解析出崩溃的那个方法，具体使用方法参考 [ReadMe](https://github.com/answer-huang/dSYMTools)。
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/12/7-2.jpg?raw=true)
