添加英文入口

--- a/2017/12.md
+++ b/2017/12.md
@@ -201,6 +201,7 @@ git push origin HEAD:refs/for/Dev0.0.1
 
 宏中的 ## 的含义
 ----
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
 在宏的定义中，我们也许会遇到过 `##`，比如下面是一些第三方库中 `##` 使用场景：
 
@@ -251,6 +252,7 @@ static BOOL const KTVHCLog_##target##_ConsoleLogEnable = console_log_enable;    
 
 iOS快速解析崩溃日志
 ----
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
 
 平时我们拿到一份崩溃日志，需要解析，一般操作是取到对应的 dSYM 和对应的二进制文件，然后拿到相应的崩溃日志 uuid 、二进制的 uuid、dSYM 的 uuid 通过命令行来解析。这些操作感觉比较耗时。下面介绍几种情况下的快速解析的方法：
 
