1月第二周整理

--- a/2018/目录.md
+++ b/2018/目录.md
@@ -4,6 +4,9 @@
 
 * [1. 为什么音频播放器突然没声音了呢？【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
 * [2. iOS 中音量控制解惑【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
-
+* [3. 动态修改应用程序的icon【南峰子_老驴】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
+* [4. iOS 关于音频播放调研【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
+* [5. iOS中NSArray/NSSet的一些巧妙用法【Vong_HUST】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
+* [6. 对清除图片缓存的思考【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
 
 
