整理1月第三周内容

--- a/2018/01.md
+++ b/2018/01.md
@@ -254,3 +254,133 @@ iOS中NSArray/NSSet的一些巧妙用法
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2018/01/5-2.jpg?raw=true)
 
 
+打印App中加载的库
+--------
+
+**作者**: [南峰子_老驴](https://weibo.com/touristdiary)
+
+之前分享过配置环境变量 DYLD_PRINT_STATISTICS，来在控制台打印出程序启动过程中各个阶段所消耗的时间。今天再分享两个环境变量：DYLD_PRINT_LIBRARIES 和 DYLD_PRINT_LIBRARIES_POST_LAUNCH，这两个变量用于打印 dyld 加载的库，如图1所示：
+
+```objc
+dyld: loaded: /var/containers/Bundle/Application/717397DD-AE3E-457F-A446-609883FF865C/ChangeIcon.app/ChangeIcon
+dyld: loaded: /Developer/usr/lib/libBacktraceRecording.dylib
+dyld: loaded: /Developer/usr/lib/libMainThreadChecker.dylib
+dyld: loaded: /Developer/Library/PrivateFrameworks/DTDDISupport.framework/libViewDebuggerSupport.dylib
+dyld: loaded: /System/Library/Frameworks/Foundation.framework/Foundation
+dyld: loaded: /usr/lib/libobjc.A.dylib
+dyld: loaded: /usr/lib/libSystem.B.dylib
+dyld: loaded: /System/Library/Frameworks/CoreFoundation.framework/CoreFoundation
+dyld: loaded: /System/Library/Frameworks/UIKit.framework/UIKit
+dyld: loaded: /usr/lib/libarchive.2.dylib
+dyld: loaded: /usr/lib/libicucore.A.dylib
+dyld: loaded: /usr/lib/libxml2.2.dylib
+dyld: loaded: /usr/lib/libz.1.dylib
+dyld: loaded: /System/Library/Frameworks/CFNetwork.framework/CFNetwork
+dyld: loaded: /System/Library/Frameworks/SystemConfiguration.framework/SystemConfiguration
+......
+```
+
+两者的区别在于 DYLD_PRINT_LIBRARIES 会打印出所有被加载的库，而 DYLD_PRINT_LIBRARIES_POST_LAUNCH 打印的是通过 dlopen 调用返回的库，包括动态库的依赖库，主要发生在 main 函数运行之后。
+
+参考：[Logging Dynamic Loader Events](https://developer.apple.com/library/content/documentation/DeveloperTools/Conceptual/DynamicLibraries/100-Articles/LoggingDynamicLoaderEvents.html)
+
+自定义WebView的UserAgent
+--------
+
+**作者**: [_拿破仑的_风火轮_](https://weibo.com/u/2293476232)
+
+1. 产品需求:所有APP内的WebView访问的自家服务, 根据 UserAgent 自动切换显示合适的内容.
+2. 思路:自定义全局的UserAgent.
+3. 实现代码如下:
+
+```
+/**
+ * User-Agent 格式参照了 AFNetworking 设置
+ */
+- (void)customizeWebViewUserAgent {
+    NSString *userAgent = nil;
+    
+#pragma clang diagnostic push
+#pragma clang diagnostic ignored "-Wgnu"
+    // User-Agent Header; see http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.43
+    userAgent = [NSString stringWithFormat:@"%@/%@ (%@-WebView; iOS %@; Scale/%0.2f)", [[NSBundle mainBundle] infoDictionary][(__bridge NSString *)kCFBundleExecutableKey] ?: [[NSBundle mainBundle] infoDictionary][(__bridge NSString *)kCFBundleIdentifierKey], [[NSBundle mainBundle] infoDictionary][@"CFBundleShortVersionString"] ?: [[NSBundle mainBundle] infoDictionary][(__bridge NSString *)kCFBundleVersionKey], [[UIDevice currentDevice] model], [[UIDevice currentDevice] systemVersion], [[UIScreen mainScreen] scale]];
+#pragma clang diagnostic pop
+    
+    if (userAgent) {
+        if (![userAgent canBeConvertedToEncoding:NSASCIIStringEncoding]) {
+            NSMutableString *mutableUserAgent = [userAgent mutableCopy];
+            if (CFStringTransform((__bridge CFMutableStringRef)(mutableUserAgent), NULL, (__bridge CFStringRef)@"Any-Latin; Latin-ASCII; [:^ASCII:] Remove", false)) {//把不符合ASCII编码的字符,转码成ASCII编码格式
+                userAgent = mutableUserAgent;
+            }
+        }
+        
+        [NSUserDefaults.standardUserDefaults registerDefaults:@{@"UserAgent": userAgent}];
+    }
+}
+
+```
+
+* UIWebView 和 WkWebView 的默认 UserAgent 抓包如图所示
+
+    ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2018/01/6-1.png?raw=true)
+* 自定义UserAgent如图所示
+
+    ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2018/01/6-2.png?raw=true)
+
+动画实现竟然可以这么简单，支持 NA 与 Web
+--------
+
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+你有没有想过，一个复杂的类似 Twitter 点赞动画使用一行代码就可以完成，而且基本不需要调整什么参数就可以达到 UE 的要求，从几天的工作量可以缩短到几分钟。而这一切多亏了 Lottie，它可以帮我们实现这一切。只需要有个由 Bodymovin 导出的 Json 文件，即可轻松实现 UE 提供的动效。
+
+Lottie 是由 [Airbnb](http://airbnb.io) 开源的库，它支持 iOS, macOS， Android ，React Native 和 Web。它主要通过解析一个由 Bodymovin 导出的 Json 文件，然后在 NA 和 Web 上渲染动画。而这些动画最初通过 Adobe After Effects 软件设计。
+
+Adobe After Effects简称“AE”是Adobe公司推出的一款图形视频处理软件，适用于从事设计和视频特技的机构，包括电视台、动画制作公司、个人后期制作工作室以及多媒体工作室。
+
+Bodymovin 是 Adobe After Effects 的一个插件，可以把通过 AE 做出的动画，导出为 Json 文件，而 Lottie 直接使用导出的 Json 文件在手机端渲染动画。
+
+看看具体的一个 Twitter 点赞动画实例：
+
+```
+LOTAnimatedSwitch *heartIcon = [LOTAnimatedSwitch switchNamed:@"TwitterHeart"];
+heartIcon.frame = CGRectMake(100, 100, 200, 200);
+[self.view addSubview:heartIcon];
+```
+Lottie 可以直接创建一个动画视图添加到另一个视图上，既可以完成显示。而它的原理就是通过解析 Json 文件生成一个 LOTComposition 类，来管理动画所需要的参数，然后利用原生类实现动画效果。目前主要支持的动画特性有：
+
+1. 转场动画；
+2. 通过 Json 文件渲染动画；
+3. 可以通过一个动画播放器来播放动画，拖到进度条，查看动画的实现，这对自己实现一个原生动画非常有帮助；
+4. 在运行时修改动画；
+
+关于断言的一些用法和坑
+--------
+
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+众所周知，我们在写代码的时候会写一些断言来发现调试阶段的一些异常情况，但是这些异常情况上线后是不应该展示给用户或者让用户感知到的。
+
+通常使用 NSAssert 或基于它的宏。Xcode 4.2之后在 release 模式下会自动将所有的 NSAssert 优化掉，也就是说，release 模式下，NSAssert 不会被编译到二进制文件中去，主要是通过这个宏 NS_BLOCK_ASSERTIONS 来实现的。
+但是项目中接入的第三方库或者其它团队提供的库，无法保证他们也用 NSAssert，写C语言的工程师一般是用 assert 来做断言处理，但是这里就来坑了。具体坑体现在以下两种情况：
+
+1、assert 在 release 下 Xcode 是不会自动将这些断言移除，也就是会导致正式生产环境下会导致一些异常(崩溃)。我们可以通过 Building Settings -> 搜索“Preprocessor Macros” 找到 release 模式，双击，然后添加，输入 NDEBUG=1 即可。如图所示
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2018/01/7-1.jpg?raw=true)
+
+2、说完第一个坑，又来到第二个，如果 pod 里面也有用到 assert，上述步骤对 pod 无效。解决方案如图
+
+![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2018/01/7-2.jpg?raw=true)
+
+就是 pod install 之后把每个 pod 的 target 的 release 模式添加 NDEBUG=1。或者也可以在 podspec 里面添加对应的 GCC_PREPROCESSOR_DEFINITIONS 定义，不过由于是第三方库，可能不太方便（自己维护的 pod 另说）。
+
+参考链接：[NSHipster](http://nshipster.com/nsassertionhandler/)、[Stackoverflow](https://stackoverflow.com/a/7887526)
+
+
+证书勿随意Revoke
+--------
+
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+用`InHouse`证书打了一个包，当`InHouse`证书过期后，已经安装了这个包的用户还可以继续正常使用，但用户想全新安装或者覆盖安装这个包就会失败；如果`InHouse`证书不是自然过期，而是手动`Revoke`，那么注意啦，用户不仅不能安装这个包，还会影响已经安装了这个包的用户，启动就会闪退，无法正常使用，如果此时你正在用蒲公英或者fir等三方平台灰测，那么可想而知。。。。虽然说发布证书`Revoke`不会影响已经发布到`AppStore`的包，但是依旧不提倡；如果你随意`Revoke`了一个正在使用中的`Push`证书，那么恭喜你，在你生成新的证书，`Push`服务器更换之前，你的用户就无法收到`Push`啦。`Revoke`需谨慎，且行且珍惜！搞不好，就会影响一大批用户。。。。
+
