--- a/2018/目录.md
+++ b/2018/目录.md
@@ -8,5 +8,10 @@
 * [4. iOS 关于音频播放调研【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
 * [5. iOS中NSArray/NSSet的一些巧妙用法【Vong_HUST】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
 * [6. 对清除图片缓存的思考【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
+* [7. 打印App中加载的库【南峰子_老驴】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
+* [8. 自定义WebView的UserAgent【_拿破仑的_风火轮_】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
+* [9. 动画实现竟然可以这么简单，支持 NA 与 Web【Lefe_x】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
+* [10. 关于断言的一些用法和坑【Vong_HUST】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
+* [11. 证书勿随意Revoke【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/01.md)
 
 
