--- a/2018/03.md
+++ b/2018/03.md
@@ -296,3 +296,182 @@ void lefexTimerAction(CFRunLoopTimerRef timer, void *info){
 
 网上的解决也是五花八门，比如说删除 `App` 重新 `Run`，`Clean` 等，发现并没有起什么卵用，并且还会占用很多开发时间。想想一个大型项目要重新编译是一件多么可怕的事情。好嘛，重点来了，图中这种错误，有一个简单而又有效的非官方解决方案——随便找一个 `.h` 或者 `.m` 进行一下增删改即可，是不是很神奇，屡试不爽。`<iPhone has denied the launch request>` 这种错误也可以用这种解决方案。
 
+利用 Git-hook 自动配置不同仓库的用户信息
+----
+**作者**: [halohily](https://weibo.com/halohily)
+
+> 问题的起因来自于某天一位同学的问题：“我给一个知名开源项目提交了代码，也被合并了，为什么 `contributors` 里面没有我？”其实，这多是因为提交代码时本地仓库的`user.name`、`user.email`与GitHub账号不匹配导致，只有提交代码时的用户设置与自己的 `GitHub` 账号相匹配时，各项数据才会被 `GitHub` 计入统计。如下图所示，这样的 `commit` 记录便来自于一个用户设置和我 `GitHub` 账号不匹配的本地仓库。
+
+![图1](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/4-1.jpg?raw=true)
+
+如果你不仅使用 `GitHub` ，还会向公司自建的 `GitLab` ，以及 `oschina` 、`coding.net` 等基于 `Git` 的托管服务商提交代码，那么便会面临这个问题：你需要为不同来源的 `Git` 仓库一一配置用户名与邮箱信息，来避免上述的不同步情况。然而，手动在每个本地仓库路径下都使用 `git config user.name` 和 `git config user.email` 命令，难免会有忘记的情况，也过于繁琐。所以，我们可以使用**Git初始模板、钩子函数**的特性，达到在**每次clone一个新的仓库时，根据仓库来源域名的不同，自动配置不同的用户信息**。
+
+- 首先，在命令行使用该命令建立一个新的文件夹：`mkdir -p ~/.git-templates/hooks`
+
+- 然后配置git，让git知道这个文件夹是你的模板文件夹：`git config --global init.templatedir ~/.git-templates`
+
+- 接下来，在这个文件夹中新建钩子文件：`vi ~/.git-templates/hooks/post-checkout`
+
+  钩子文件的内容较长，可在文末附带的链接中查看复制即可，完成之后赋予这个文件可执行权限：`chmod +x ~/.git-templates/hooks/post-checkout`
+
+- 最后，新建一个文件：`vi ~/.git-clone-init`
+
+  最后一个文件是唯一一个内容需要自己配置的文件，也是整个过程的关键，内容格式如图2，意为对应不同域名下的仓库，自动配置不同的`user.name`和`user.email`。
+  
+![图2](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/4-2.jpg?raw=true)
+
+**整个过程的原理就是我们在执行克隆操作时，git会执行初始模板里的钩子文件，钩子文件根据git-clone-init文件定义的规则，自动配置用户名与邮箱信息。这套流程来自于一个GitHub开源库，目前star还很少，大家可以去支持一下~**
+
+参考：
+
+1. [DrVanScott/git-clone-init](https://github.com/DrVanScott/git-clone-init)
+2. [让你的git拥有不同身份](https://segmentfault.com/a/1190000013283182)
+
+应用 icon 被 Cocoapods “吃掉”的解决方式
+----
+**作者**: [Vong_HUST](https://weibo.com/VongLo)
+
+最近在做模块化相关的事情，和 `Cocoapods` 频繁接触，也踩了一些坑，今天主要分享一下最近遇到的一个 `bug`。
+
+做模块化的时候，不同模块会有一个自己独立的 `repo`，然后有自己的各种资源，我们采取的方式是将图片放到 `.xcassets` 文件夹中，然后打到 `bundle` 当中，大概方式如图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/3-1.jpg?raw=true)
+
+放到 `bundle` 的 `.xcassets` 是为了防止图片和主工程或者其它模块中图片重名
+
+`run` 起来，一切图片等资源读取非常正常（资源的读取感觉后面有机会再写一篇文章单独介绍了），但是当我们 `Home` 出去的时候，发现应用的 `icon` 没了，变成了默认的那种空白图标😂，WTF！
+
+果断到 `CocoaPods` 官方 `repo` 中寻求一波援助，发现有人提了类似的 [issue](https://github.com/CocoaPods/CocoaPods/issues/7003) 有人提出了一种解决方案，亲测可行。
+
+原因是 `Xcode` 在 `"Copy Bundle Resources"` 阶段编译 `.xcassets` 加了 `--app-icon` 参数，而 `"[CP] Copy Pods Resources"` 阶段没有加这个参数，而且覆盖了编译出来的 `Assets.car`。解决方式就是在第一步加上这个参数。解决方式如下图，在 `podfile` 中加入参考链接中的脚本内容。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/3-2.jpg?raw=true)
+
+还有一种解决方案就是把图片全部放到 `bundle`，不放在 `.xcassets` 的形式，也是亲测可行。但是这种方式不太优雅，因为可能导致图片重名，读取错误。
+
+参考：
+
+1. [issue 解决方案](https://github.com/CocoaPods/CocoaPods/issues/7003#issuecomment-328045681)
+2. [resource_bundles or resources](http://zhoulingyu.com/2018/02/02/pod-resource-reference/)
+
+三个打印类信息的私有方法
+----
+**作者**: [南峰子_老驴](https://weibo.com/touristdiary)
+
+想在 `NSLog` 打印变量的类型信息，无意中找到了看到 `Extended Type Info in Objective-C` 这篇文章，发现了 `NSObject` 的打印类相关信息的三个私有方法，分享一下：
+
+1. `_methodDescription/_shortMethodDescription`：打印接收者的所有实例方法和类方法，包括私有方法；
+2. `_ivarDescription`：打印接收者的成员变量，包括类型和值；
+
+我们可以如下使用这几个方法：
+
+```objc
+UIView *view = [[UIView alloc] init];
+NSLog(@"%@", [view performSelector:@selector(_ivarDescription)]);
+```
+
+打印的信息如下所示。
+
+```
+<UIView: 0x7fa18a7022d0>:
+in UIView:
+	_constraintsExceptingSubviewAutoresizingConstraints (NSMutableArray*): nil
+	_cachedTraitCollection (UITraitCollection*): nil
+	_layer (CALayer*): <CALayer: 0x604000222ac0>
+	_layerRetained (CALayer*): <CALayer: 0x604000222ac0>
+	_enabledGestures (int): 0
+	_gestureRecognizers (NSMutableArray*): nil
+	_window (UIWindow*): nil
+	_subviewCache (NSArray*): nil
+	_templateLayoutView (UIView*): nil
+	_charge (float): 0
+	_tag (long): 0
+	_viewDelegate (UIViewController*): nil
+	_backgroundColorSystemColorName (NSString*): nil
+	_countOfMotionEffectsInSubtree (unsigned long): 0
+	_unsatisfiableConstraintsLoggingSuspensionCount (unsigned long): 0
+	_countOfTraitChangeRespondersInDirectSubtree (unsigned long): 1
+	_cachedScreenScale (double): 0
+	_viewFlags (struct ?): {
+		userInteractionDisabled (b1): NO
+		implementsDrawRect (b1): NO
+		implementsDidScroll (b1): NO
+		implementsMouseTracking (b1): NO
+		implementsIntrinsicContentSize (b1): NO
+		hasBackgroundColor (b1): NO
+		......
+```
+
+如果对这些信息感兴趣，可以重写类的 `debugDescription()` 方法，在这个方法里面调用上面几个方法。
+
+需要注意一个问题：这些方法在是 `iOS 7+` 中，在 `UIKit` 里面实现的，所以在 `Mac OS` 中用不了，可以尝试建一个控制台程序，看看结果。
+
+参考：[Extended Type Info in Objective-C](http://bou.io/ExtendedTypeInfoInObjC.html)
+
+换一种 Hook 的姿势
+----
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+开发过程中，有时为了满足需求，通常会 `Hook` 系统或第三方库的一些方法。每次写一长串模版代码，是不是很痛苦？
+
+其实可以换一种 `Hook` 的姿势 ------ 使用 `CaptainHook` 库。它非常友好地提供一些宏来 `Hook` 某些方法。其实在逆向中，开发者通常使用这个库来 `Hook` 一些方法来达到目的。比如使用 `class-dump` 导出某个项目的头文件，然后替换掉需要 `Hook` 的方法。
+
+简单举个例子：
+
+替换掉 `HookObject` 类中的 `hookMe` 和 `userName` 方法。
+
+```
+// 声明要 Hook 的类，HookObject 是已经声明的一个类
+CHDeclareClass(HookObject);
+
+// Hook 无返回值，无参数的方法
+CHMethod0(void, HookObject, hookMe){
+    NSLog(@"I am a hook method: hookMe");
+    CHSuper0(HookObject, hookMe);
+}
+// Hook 有返回值，无参数的方法
+CHMethod0(NSString *, HookObject, userName){
+    NSLog(@"I am a hook method: userName");
+    return CHSuper0(HookObject, userName);
+}
+// 构造 Hook 的类
+CHConstructor{
+    CHLoadClass(HookObject);
+    CHHook0(HookObject, hookMe);
+    CHHook0(HookObject, userName);
+}
+```
+
+参考：[CaptainHook](https://github.com/rpetrich/CaptainHook/wiki)
+
+解决修改 xcconfig 配置版本号和 build 号不生效的问题
+-------
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+之前我有介绍过 `xcconfig` 这个 tip，最近使用中遇到了一点小问题：当我使用 `xcconfig` 来管理版本号和 `build` 号时（如下图所示），
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/5-1.jpg?raw=true)
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/5-2.jpg?raw=true)
+
+编译一次之后，修改这两个值，此时我在运行的时候想把这两个值读出来，如下图所示：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/5-3.jpg?raw=true)
+
+发现读出来的依然是修改之前的值，如下图所示：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/5-4.jpg?raw=true)
+
+此时打开 `Product` 下面的 `Demo.app` 文件，查看 `Info.plist` 文件发现，里面果然显示的还是老值，如下图所示：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/5-5.jpg?raw=true)
+
+这是因为使用 `xcconfig` 管理这两个值后，`Info.plist` 用的这两个值是 `User-Defined` 变量，并不能检测这两个变量内容有变更导致的缓存问题。最简单的解决办法就是 `Clean` 一下，再运行就能显示正确的值了，但对于中大型项目来说 `Clean` 的成本有点高，所以就想到了用脚本来解决这个问题（如下图所示），
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/5-6.jpg?raw=true)
+
+每次运行时更新这两个缓存中的值即可。
+
+如果有其他更好的解决办法，欢迎分享！
+
+
