--- a/2018/目录.md
+++ b/2018/目录.md
@@ -36,4 +36,9 @@
 * [4. Objective-C中自定义泛型类 【南峰子】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
 * [5. 再谈 timer 之 CFRunLoopTimerRef 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
 * [6. 解决Xcode真机无法联调的野路子【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [7. 应用 icon 被 Cocoapods “吃掉”的解决方式 【Vong】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [8. 解决修改 xcconfig 配置版本号和 build 号不生效的问题 【高老师很忙】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [9. 利用 Git-hook 自动配置不同仓库的用户信息 【halohily】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [10. 三个打印类信息的私有方法 【南峰子】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
+* [11. 换一种 Hook 的姿势 【Lefe】](https://github.com/southpeak/iOS-tech-set/blob/master/2018/03.md)
 
