--- a/2018/03.md
+++ b/2018/03.md
@@ -475,3 +475,176 @@ CHConstructor{
 如果有其他更好的解决办法，欢迎分享！
 
 
+
+
+使用 Apple Configuration 配置自动加入 Wi-Fi
+-----
+**作者**: [南峰子_老驴](https://weibo.com/touristdiary)
+
+通常我们的 `iPhone` 手机都会自动连接已经记住的 `Wi-Fi` 网络，对于一些企业级的 `WPA/WPA 2` 网络，如果不能自动加入的话，我们可以自己配置一个 `Wi-Fi` 描述文件来做自动加入。
+
+我们可以使用 “`Apple Configuration`” 或者 “描述文件管理器” 来生成配置文件，如下图是使用 “`Apple Configuration`” 来配置（文件 -> 新建配置文件），当然我们需要知道 `Wi-Fi` 实际的配置，比如网络协议接受的 `EAP` 类型。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/8-1.png?raw=true)
+
+配置完成后保存成一个 `.mobileconfig` 文件，这实际上是一个 `xml` 文件，内容如下图所示。因此，我们实际上是可以通过代码的形式来生成这个文件。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/8-2.png?raw=true)
+
+生成的 `.mobileconfig` 文件可以使用 “`Apple Configuration`” 导入到手机里面，如下图所示。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/8-3.png?raw=true)
+
+剩下的就是在手机上正常安装描述文件的流程，需要进到 “设置 -> 通用 -> 描述文件” 里面安装这个描述文件。安装完成后，就可以自动连接 `Wi-Fi` 了。
+
+需要注意的几个问题：
+
+1. 如果想输入密码，可以勾选“使用单次连接密码”，不过这个选项不能和“自动加入”同时使用；如果两个都勾选会默认使用“使用单次连接密码”；
+2. 可以对配置文件做签名，但如果签名后，文件将不能再做修改；同时保存的文件内容变成16进制数据，所以也不能像修改 `xml` 文件那样手动修改文件；
+3. 未签名的 `xml` 文件，是以明文的形式保存密码；
+4. 如果需要证书认证，则要将相应的证书配置到描述文件中；
+5. 在线安装描述文件的方式仅限于 `Safari`、`Mail`；
+6. 使用 `portal` 方式认证的登录木有验证过；
+
+参考：
+
+[关于“自动加入”和单一连接密码 Wi-Fi 描述文件设置](https://support.apple.com/zh-cn/HT202343)
+
+断案高手之otool
+------------
+**作者**: [高老师很忙](https://weibo.com/517082456)
+
+前段时间一个朋友遇到了一个问题：每次打包的时候都会把某个方法注释掉，但为什么这次打包出来的效果却不对呢？按照他的思路想来的确百思不解，但秉着“世上没有无缘无故的恨”的原则，我还是想帮他解决一下疑问，我看了他的代码，并没有打 `Tag`，也没有环境区分（ `DEBUG` 和 `RELEASE` 区分）😂，就只能用 `otool` 来试试，方法如下：打开 `.ipa` 文件的 `Unix` 可执行文件，如下图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/7-1.jpg?raw=true)
+
+然后在 `Terminal` 中输入 `otool` 的命令，就可以打印出使用了哪些方法，如下图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/7-2.jpg?raw=true)
+
+这只是 `otool` 的一个小用法，这个工具很强大，感兴趣的小伙伴们可以深入了解一下。
+
+不过从这个事情中可以看出来，人的记忆是不可靠的，规范项目才是王道！
+
+
+
+iOS9 以后 openURL 和 canOpenURL 使用限制的小误区
+----
+**作者**: [KANGZUBIN](https://weibo.com/kangzubin)
+
+通常我们会用 `UIApplication` 的 `openURL:` 方法调起其他 App 来进行一些操作，如分享、第三方登录、支付等。但 `iOS9` 发布后，在看了很多适配总结的文章后，相信很多人可能跟我一样会有如下理解：
+
+> `iOS9` 限制了 `openURL:` 和 `canOpenURL:` 方法的使用，如果我们要调起第三方 App，需要在 `Info.plist` 的 `LSApplicationQueriesSchemes` Key 中添加相应 App 的 `Scheme` 才行，且添加的 `Scheme` 个数不能超过 **50** 个。
+
+**其实上面描述是有误的。**
+
+举个例子，大部分 App 在接入微信的 `SDK` 后，会先在自己工程配置中的 `Info` -> `URL Types` 添加注册一个 `Scheme`，叫 “wx+appId” ，以便在调起微信进行登录或分享后，微信回调返回到我们自己的 App 中。但是试想一下，如果 `openURL:` 使用必须事先声明且有个数的限制，那么微信如何回调成千上万的 App 呢，难道微信要在其工程的 `Info.plist` 中把这些第三方 App 的 `Scheme` 都添加进去，而且每天都会有新增的 App 接入了微信 `SDK`，如何动态更新添加 `Scheme` 呢？微信是有什么黑科技或者苹果给微信等大厂的超级 App 开了特殊通道？
+
+在查阅了苹果官方文档后，我们发现其实并不是这样的，如下图：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/6-1.png?raw=true)
+
+>**！！！只有 `canOpenURL:` 方法的使用受 `Info.plist` 中声明的 `Scheme` 的限制，而 `openURL:` 方法是不受限制的，不需要事先声明，也没有个数限制。**（其实在 `iOS9` 的某 Beta 版上，`openURL:` 也受同样限制，但苹果后面确认是 Bug，在正式版中已更正过来）
+
+另外关于 `canOpenURL:` 最多只能对 **50** 个 `Scheme` 做判断的说法也是错误的。苹果的正确描述是：**“如果你的 App 是使用 `Xcode 7 (iOS9 SDK)` 之前版本编译的，但是在 `iOS9` 及以后的系统中运行，那么你的 App 最多只能调用 50 次 `canOpenURL:` 方法，超过 50 次后，该方法都会返回 `NO`。”**
+
+如果我们使用最新版的 `Xcode` 编译 App，`canOpenURL:` 能判断的 `Scheme` 个数应该是不受限制的。
+
+我写了一个 `Demo` 验证了以上说法，如下图所示，在 `Info.plist` 中我先添加了超过 100 个 `Scheme` 后再添加 "weixin"，仍可以通过 `canOpenURL:` 判断是否安装了微信，另外即使没有添加微博的 `Scheme` "sinaweibo" 也可以通过 `openURL:` 正常打开。
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/6-2.png?raw=true)
+
+Demo 地址：[TestOpenURL](https://github.com/kangzubin/DevDemo/tree/master/TestOpenURL)
+
+>虽然 `openURL:` 方法使用不受限制，但是苹果还是建议我们在使用它之前，先调 `canOpenURL:` 判断一下，再进行后续操作。
+
+以上测试结果是在真机 **`iPhone 8 (iOS 11.2.6)`** 上进行的，如果其他设备或者系统版本有差异，欢迎留言讨论。
+
+参考链接：
+
+* [Apple Developer Documentation](https://developer.apple.com/documentation/uikit/uiapplication/1622952-canopenurl?language=objc)
+* [Querying URL Schemes with canOpenURL](https://useyourloaf.com/blog/querying-url-schemes-with-canopenurl/)
+
+
+
+
+“偷窥”第三方APP头文件
+----
+**作者**: [Lefe_x](https://weibo.com/u/5953150140)
+
+有时候在开发的过程中需要些黑科技，“偷窥”第三方 APP 使用了哪些第三方库，或猜猜它是如何实现的，咋么办？
+
+其实我们可以使用 `class-dump` 这个工具查看某个 APP 的头文件。只需要找到第三方 APP 的 `xxx.app` 文件，然后执行 `class-dump` 命令即可。不过在执行 `class-dump` 命令前，需要确保 `xxx.app` 是砸过壳的，从 `APPStore` 下载的 `xxx.app` 文件是经过加密处理的，可以直接从各大越狱市场上下载第三方 `xxx.app` 文件，从越狱市场下载的 `xxx.app` 已被破解。可以直接使用 `class-dump` 导出头文件。
+
+### 安装
+
+网上很多教程，不啰嗦了哈。
+
+### 实战
+
+创建一个 `Demo`，然后打包导出 `ipa` 包，找到 `xxx.app`，这里 `xxx.app` 是未经过加密的。具体代码如下：
+
+```objc
+@protocol ViewControllerDelegate<NSObject>
+
+- (void)didRefreshDataSuccess;
+
+@end
+
+@interface ViewController : UIViewController
+
+@property (nonatomic, weak) id<ViewControllerDelegate> delegate;
+@property (nonatomic, copy) NSString *pubName;
+
+- (void)pubLoadDataWithAlbumID:(NSString *)albumID count:(NSString *)count;
+
+@end
+
+@interface ViewController1 (Navigation)
+
+- (void)setRightBarItemWithTitle:(NSString *)title;
+
+@end
+```
+
+执行 `class-dump` 命令：
+
+```ruby
+class-dump -H [xxx.app所在的位置] -o [头文件导出的位置]
+```
+
+比如：
+
+```ruby
+class-dump -H Lefex.app -o lefexheader
+```
+
+最终导出的头文件如下：
+
+![](https://github.com/iOS-Tips/iOS-tech-set/blob/master/images/2018/03/9-1.jpg?raw=true)
+
+### 总结
+
+使用 `class-dump` 导出头文件有以下特点：
+
+1. 不管 `.h` 还是 `.m` 文件中的属性和方法都会被导出；
+2. 某个类的类别中的方法也会被导出，导出到源文件中，比如 `ViewController (Navigation)` 中的方法被导出到 `ViewController` 中；
+3. 实现的协议也会被导出，比如 `ViewControllerDelegate` 的方法被导出到 `ViewController` 中，如果 `ViewController` 不实现 `ViewControllerDelegate` 协议讲不会被导出；
+4. 协议中定义的方法不会被导出，只会导出到实现协议的类中；
+
+### 参考
+
+[Class-dump](http://stevenygard.com/projects/class-dump/)
+
+可以参考这个 [@everettjf](https://weibo.com/everettjf?from=usercardnew&refer_flag=0000020001_)  http://everettjf.com/2016/07/09/classify-class-dump-headers-tool/ ，话说可以导出头文件并找出使用的第三方库。不过我试了下没安装成功就没深究，有兴趣的朋友可以看看。
+
+
+
+
+
+打包时 Xcode 无法及时更新 Provisioning Profile 的解决办法
+-----
+**作者**: [halohily](https://weibo.com/halohily)
+
+我们在苹果开发者中心新添加一台测试设备的 `UDID` 之后，紧接着打出一份 `Adhoc` 包，却发现新添加的设备还是无法安装。这是因为 `Xcode` 没有及时更新云端的 `Provisioning Profile`。这时可以清除本地目录 `~/Library/MobileDevice/Provisioning` 下的所有内容，然后打包时勾选 `Automatically manage signing` 选项，`Xcode` 会自动下载云端的最新 `Provisioning Profile`。
+
